# personal-learning-coach

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESION.md  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
.github/workflows/: ci.yml
.omc/: project-memory.json
.omc/sessions/: 42e740c3-bdc2-4ea8-bcbc-5ca157073b26.json  5f4a9e69-ee90-4e2c-a82a-be2402de3388.json  abf835ac-aff1-46bf-8680-98346287405f.json  d5521832-b360-431b-91f8-de1596ecccda.json
docs/: personal_learning_coach_项目实施计划.md  personal_learning_coach_项目整体设计与需求规格说明书.md
src/personal_learning_coach/: __init__.py  backup_service.py  coach.py  config.py  content_pusher.py  data_store.py  email_sender.py  evaluator.py  learning_intent.py  level_tester.py  llm_client.py  mastery_engine.py  migrations.py  models.py  monitoring.py  plan_generator.py  question_history.py  registration_verification.py  report_generator.py  review_engine.py  scheduler_adapter.py  security.py
src/web/: apiClient.test.ts  apiClient.ts  authRegistration.test.ts  authRegistration.ts  domainForm.test.ts  domainSelection.test.ts  domainSelection.ts  evaluationView.test.ts  evaluationView.ts  index.html  main.ts  package-lock.json  package.json  projectBackground.test.ts  questionView.test.ts  questionView.ts  reportExport.test.ts  (+5 more)
tests/: conftest.py  test_api.py  test_api_server.py  test_coach.py  test_config.py  test_content_pusher.py  test_data_store.py  test_evaluator.py  test_learning_intent.py  test_migrations.py  test_models.py  test_plan_generator.py  test_report_generator.py  test_review_engine.py
(+64 files in other folders)
